--- a/reflex_sf_msgs/CMakeLists.txt
+++ b/reflex_sf_msgs/CMakeLists.txt
@@ -20,6 +20,7 @@ add_message_files(
    FILES
    SFPose.msg
    SFVelocity.msg
+   SFCommand.msg
 )
 
 ## Generate added messages and services with any dependencies listed here
